--- a/spring-mvc-demo/src/main/webapp/WEB-INF/web.xml
+++ b/spring-mvc-demo/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 	
 	<!-- spring mvc servlet -->
 	<servlet>
-		<servlet-name>pet_finfront</servlet-name>
+		<servlet-name>DispatcherServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
@@ -26,7 +26,7 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>pet_finfront</servlet-name>
+		<servlet-name>DispatcherServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
