--- a/spring-mvc-demo/src/main/resources/log4j.properties
+++ b/spring-mvc-demo/src/main/resources/log4j.properties
@@ -3,4 +3,4 @@ log4j.logger.sysLogger=INFO
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %-5p pet_finfront [%t] (%F:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d %-5p spring-mvc-demo [%t] (%F:%L) - %m%n
