--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -17,6 +17,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>1.4.2.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
