--- a/x-back/src/main/resources/jdbc.properties
+++ b/x-back/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 
-jdbc.url=jdbc:mysql://192.168.17.212/x-back
+jdbc.url=jdbc:mysql://192.168.17.212/x-back?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=123456
 
