--- a/java-demo-maven/pom.xml
+++ b/java-demo-maven/pom.xml
@@ -4,22 +4,32 @@
 	<groupId>cn.leo.demo</groupId>
 	<artifactId>java-demo-maven</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
-	
+
+	<dependencies>
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+
+
+	</dependencies>
+
+
 
 
 	<build>
 		<resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-        </resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
