--- a/netty-demo/pom.xml
+++ b/netty-demo/pom.xml
@@ -13,6 +13,18 @@
 			<version>5.0.0.Alpha1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling-serial</artifactId>
+			<version>1.3.0.CR9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling</artifactId>
+			<version>1.3.0.CR9</version>
+		</dependency>
+
 
 
 
