--- a/java-demo-maven/pom.xml
+++ b/java-demo-maven/pom.xml
@@ -12,6 +12,11 @@
 			<version>1.6.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 
 	</dependencies>
 
