--- a/java-demo-maven/src/main/resources/log4j.properties
+++ b/java-demo-maven/src/main/resources/log4j.properties
@@ -4,8 +4,8 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %-5p [%t] (%F:%L) - %m%n
 
-log4j.appender.file = org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.file.File = D:/all-log/java-demo-maven/log.out
-log4j.appender.file.Append = true  
-log4j.appender.file.layout = org.apache.log4j.PatternLayout  
-log4j.appender.file.layout.ConversionPattern = %d %-5p [%t] (%F:%L) - %m%n
+#log4j.appender.file = org.apache.log4j.DailyRollingFileAppender  
+#log4j.appender.file.File = D:/all-log/java-demo-maven/log.out
+#log4j.appender.file.Append = true  
+#log4j.appender.file.layout = org.apache.log4j.PatternLayout  
+#log4j.appender.file.layout.ConversionPattern = %d %-5p [%t] (%F:%L) - %m%n
