--- a/servlet-demo/src/main/webapp/WEB-INF/web.xml
+++ b/servlet-demo/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,8 @@
 		<url-pattern>/servlet1/*</url-pattern>
 	</servlet-mapping>
 	
-
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 
 </web-app>
