--- a/spring-mvc-demo/pom.xml
+++ b/spring-mvc-demo/pom.xml
@@ -14,6 +14,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>cn.lab</groupId>
+			<artifactId>neon-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
