--- a/spring-mvc-demo/src/main/resources/log4j.properties
+++ b/spring-mvc-demo/src/main/resources/log4j.properties
@@ -1,5 +1,13 @@
 log4j.rootLogger=INFO, stdout
+#log4j.rootLogger=INFO, stdout, file
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %-5p [%t] (%F:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%d] %p [%t] (%F:%L) - %m %X{LOG_TAIL}%n
+
+#log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.file.File=E:/all-log/neon-back/info.log
+#log4j.appender.file.Append=true
+#log4j.appender.file.layout=org.apache.log4j.PatternLayout
+#log4j.appender.file.layout.ConversionPattern=[%d] %p neon-back [%t] (%F:%L) - %m %X{LOG_TAIL}%n
+
