--- a/java-demo-maven/pom.xml
+++ b/java-demo-maven/pom.xml
@@ -53,6 +53,12 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.23</version>
+		</dependency>
+
 	</dependencies>
 
 
