--- a/mybatis-demo/src/main/resources/log4j.properties
+++ b/mybatis-demo/src/main/resources/log4j.properties
@@ -1,9 +1,15 @@
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, file
 
+# 指定dao的包名 打印sql日志
+log4j.logger.cn.leo.mybatisdemo.dao=DEBUG
 
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern=%d %-5p [%t] (%F:%L) - %m%n
 
-log4j.logger.cn.leo.mybatisdemo.dao=INFO
+log4j.appender.file = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.File = E:/all-log/mybatis-demo.log
+log4j.appender.file.Append = true
+log4j.appender.file.layout = org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern = %d %-5p [%t] (%F:%L) - %m%n
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d %-5p [%t] (%F:%L) - %m%n
