--- a/mybatis-demo/src/main/resources/jdbc.properties
+++ b/mybatis-demo/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 
-jdbc.url=jdbc:mysql://192.168.111.128/test
+jdbc.url=jdbc:mysql://192.168.111.128/test?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=123456
 
