--- a/demo-spring-cloud-eureka-provider/src/main/resources/application.properties
+++ b/demo-spring-cloud-eureka-provider/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Server settings (ServerProperties)
 #server.sessionTimeout=30
 #server.contextPath=/
-server.port=8881
+server.port=8001
 
-spring.application.name=eureka-provider
+spring.application.name=hello-provider
 
-eureka.client.serviceUrl.defaultZone=http://localhost:9991/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
