--- a/demo-spring-cloud-eureka-consumer/pom.xml
+++ b/demo-spring-cloud-eureka-consumer/pom.xml
@@ -43,6 +43,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-ribbon</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-feign</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>cn.leo</groupId>
+			<artifactId>demo-spring-cloud-eureka-provider-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 
 	</dependencies>
