--- a/demo-spring-cloud-eureka-server/src/main/resources/application.properties
+++ b/demo-spring-cloud-eureka-server/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Server settings (ServerProperties)
 #server.sessionTimeout=30
 #server.contextPath=/
-server.port=9991
+
+
+server.port=9001
 server.waitTimeInMsWhenSyncEmpty=0
-
-
-#eureka.instance.hostname=localhost
+eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-#eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
