--- a/demo-spring-cloud-eureka-server/src/main/resources/application.properties
+++ b/demo-spring-cloud-eureka-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #server.sessionTimeout=30
 #server.contextPath=/
 
-
+spring.application.name=register-center
 server.port=9001
 server.waitTimeInMsWhenSyncEmpty=0
 eureka.instance.hostname=localhost
