--- a/demo-spring-cloud-eureka-consumer/src/main/resources/application.properties
+++ b/demo-spring-cloud-eureka-consumer/src/main/resources/application.properties
@@ -6,3 +6,5 @@ server.port=7001
 spring.application.name=eureka-consumer
 
 eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
+
+feign.hystrix.enabled=false
