--- a/demo-spring-cloud-eureka-server/src/main/resources/application.properties
+++ b/demo-spring-cloud-eureka-server/src/main/resources/application.properties
@@ -3,9 +3,10 @@
 #server.contextPath=/
 
 spring.application.name=register-center
+eureka.instance.hostname=localhost
 server.port=9001
 server.waitTimeInMsWhenSyncEmpty=0
-eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.server.enable-self-preservation=false
