--- a/java-demo-maven/pom.xml
+++ b/java-demo-maven/pom.xml
@@ -59,6 +59,12 @@
 			<version>1.2.23</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.6</version>
+		</dependency>
+
 	</dependencies>
 
 
