--- a/mybatis-demo/pom.xml
+++ b/mybatis-demo/pom.xml
@@ -6,7 +6,7 @@
   <packaging>jar</packaging>
   
   <properties>
-		<spring.version>3.2.0.RELEASE</spring.version>
+		<spring.version>4.2.0.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
@@ -105,6 +105,11 @@
 			<version>2.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -125,8 +130,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
