--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,12 @@
 		<!--<module>spring-mvc-demo</module>-->
 		<!--<module>java-demo-maven</module>-->
 		<!--<module>spring-demo</module>-->
-		<!--<module>mybatis-demo</module>-->
 		<!--<module>spring-boot-demo</module>-->
-		<module>demo-spring-cloud-eureka-server</module>
-		<module>demo-spring-cloud-eureka-provider</module>
-		<module>demo-spring-cloud-eureka-consumer</module>
-        <module>demo-spring-cloud-eureka-provider-api</module>
-    </modules>
+		<!--<module>demo-spring-cloud-eureka-server</module>-->
+		<!--<module>demo-spring-cloud-eureka-provider</module>-->
+		<!--<module>demo-spring-cloud-eureka-consumer</module>-->
+		<!--<module>demo-spring-cloud-eureka-provider-api</module>-->
+		<module>mybatis-demo</module>
+	</modules>
 	
 </project>
