--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<modules>
-		<!--<module>java-demo-maven</module>-->
-		<!--<module>java-multi-thread-demo</module>-->
+		<module>java-demo-maven</module>
+		<module>java-multi-thread-demo</module>
 		<!--<module>servlet-demo</module>-->
 		<!--<module>spring-mvc-demo</module>-->
 		<!--<module>java-demo-maven</module>-->
@@ -18,7 +18,7 @@
 		<!--<module>demo-spring-cloud-eureka-provider</module>-->
 		<!--<module>demo-spring-cloud-eureka-consumer</module>-->
 		<!--<module>demo-spring-cloud-eureka-provider-api</module>-->
-		<module>mybatis-demo</module>
+		<!--<module>mybatis-demo</module>-->
 	</modules>
 	
 </project>
